// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Tab disabled tab 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit Mui-disabled Mui-disabled"
      disabled=""
      role="tab"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiTab-wrapper PicassoTab-wrapper"
      >
        <div
          class="m-0 font-regular text-sm text-inherit font-semibold"
        >
          Tab Label
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Tab Tab renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTab-wrapper PicassoTab-wrapper"
      >
        <div
          class="m-0 font-regular text-sm text-inherit font-semibold"
        >
          Tab Label
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Tab Tab tab with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit MuiTab-labelIcon"
      role="tab"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiTab-wrapper PicassoTab-wrapper"
      >
        <div
          id="Icon"
        />
        <div
          class="m-0 font-regular text-sm text-inherit font-semibold"
        >
          Tab Label
        </div>
      </span>
    </button>
  </div>
</div>
`;
